syntax = "proto3";
option java_package = "com.fast.canal";
option java_outer_classname = "CanalModel";

message RowData{
    string logfileName = 1;
    int64 logfileOffset = 2;
    string eventType = 3;
    string schemaName = 4;
    string tableName = 5;
    uint64 executeTime = 6;

    map<string, string> columns = 7;
}